--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron"
   ],
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "electron-debug": "^1.0.0",
     "menubar": "^4.1.1"
   },
