--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron"
   ],
   "dependencies": {
+    "auto-launch": "^2.0.1",
     "cool-ascii-faces": "^1.3.4",
     "electron-config": "^0.1.1",
     "electron-debug": "^1.0.0",
